# Codex

./: README.md  app.js  index.html  landscaper_updated_invoice.md  pyproject.toml  styles.css  termux-metasploit-installer.sh
agent_loop/: __init__.py  advanced_ai_ui_cli.py  package_install_allowlist.py  self_replicator.py
scripts/: ghost_in_machine_shell.sh  scan_radios_and_emv.sh
tests/: test_advanced_ai_ui_cli.py  test_package_install_allowlist.py  test_self_replicator.py
