[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-loop"
version = "0.1.0"
description = "Safe process-level self-replication knowledge loop reference implementation"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
